@startuml class_commands.puml
title ESP32 Internet Radio - Class Diagram (Commands)

skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members
hide empty methods
hide empty fields
skinparam nodesep 20
skinparam ranksep 25

interface ICommand {
    +handle(e: const common::AppEvent&): void
    +isFinished(): bool
}

class PlayStopSkipCommand {
    -mPlayerService: services::IPlayerService&
    -mStationRepo: services::IStationRepository&
    -mUiEventQueue: common::IEventQueue&
}

class SyncStationsCommand {
    -mPlayerService: services::IPlayerService&
    -mStationRepository: services::IStationRepository&
    -mUiEventQueue: common::IEventQueue&
    -mWifiService: services::IWifiService& 
    -mHttpClient: adapters::IHttpClient&
    -mFileSystem: adapters::IFileSystem&
    -mJsonParser: common::IJsonParser&
}

class ConnectWifiCommand {
    -mUiEventQueue: common::IEventQueue&
    -mWifiService: services::IWifiService& 
    -mCb: std::function<void()>
}

interface IPlayerService
interface IStationRepository
interface IEventQueue
interface IWifiService
interface IHttpClient
interface IFileSystem
interface IJsonParser

PlayStopSkipCommand .up.|> ICommand
SyncStationsCommand .up.|> ICommand
ConnectWifiCommand .up.|> ICommand

PlayStopSkipCommand --> IPlayerService
PlayStopSkipCommand --> IStationRepository
PlayStopSkipCommand --> IEventQueue

SyncStationsCommand --> IPlayerService
SyncStationsCommand --> IStationRepository
SyncStationsCommand --> IEventQueue
SyncStationsCommand --> IWifiService
SyncStationsCommand -up-> IHttpClient
SyncStationsCommand -up-> IFileSystem
SyncStationsCommand -right-> IJsonParser

ConnectWifiCommand --> IWifiService
ConnectWifiCommand --> IEventQueue

@enduml
